--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,7 +30,7 @@ header h1 {
 }
 
 @media (max-width:992px) {
-  .dos-columnas {
+  .content {
     padding: 0 3rem;
   }
 }
@@ -40,7 +40,7 @@ main {
   max-width: 900px;
 }
 
-.contenedor {
+.container {
   border-radius: .5rem;
   background-color: white;
   padding: 4rem;
@@ -53,7 +53,7 @@ main {
   min-height: 381px;
 }
 
-.contenedor h2 {
+.container h2 {
   margin: 0 0 1rem;
   text-align: center;
 }
